Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35638

wsrep_last_{written,seen}_gtid call my_error(ER_OUTOFMEMORY) incorrectly.

    XMLWordPrintable

Details

    Description

      my_error(ER_OUTOFMEMORY, WSREP_MAX_WSREP_SERVER_GTID_STR_LEN);

      is incorrect as there is a flags argument as the second to my_error. Also length doesn't match previous statement.

      my_error(ER_OUTOFMEMORY, MYF(0), func_name()); is incorrect as OUTOFMEMORY doesn't take a functionname

      Attachments

        Activity

          People

            nikitamalyavin Nikita Malyavin
            danblack Daniel Black
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.