MDEV-35638 wsrep_last_{written,seen}_gtid call my_error(ER_OUTOFMEMORY) incorrectly.

Correctly partly in 765458c93cd5, but some values are off by one.